recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value spiral
    spiral(100,91,1,2);
    ^Tree:20: error: not found: value tree
		tree(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double],
                ^Tree:19: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Tree'
	override def run() {
                     ^